2006-12-01  Paolo Borelli  <pborelli@katamail.com>

	* gedit/plugins/filebrowser/gedit-file-browser-store.c:
	* gedit/plugins/filebrowser/gedit-file-browser-view.c:

	Allow to drag files from the pane.

2006-12-01  Paolo Borelli  <pborelli@katamail.com>

	* gedit/gedit-document-loader.c: proper error reporting when
	opening dirs and not regular files.

2006-12-01  Paolo Borelli  <pborelli@katamail.com>

	* gedit/gedit-window.c: optimize recent files menu construction.

2006-11-26  Steve Frécinaux  <code@istique.net>

	* gedit/gedit-document-loader.c: don't add the trailing \n to the
	buffer (to avoid having an empty last line). This is the way vim does.
	Fixes bug #324942.
	
	* gedit/gedit-document-saver.c: always add a trailing \n (to be
	consistent with the way the loader works).

2006-11-25  Steve Frécinaux  <code@istique.net>

	* gedit/gedit-window.c: show the whole file URI in the document menu
	tooltips; replace $HOME with ~ in URIs; remove menu tooltip
	ellipsization (useless) and fix a compilation warning (unused
	variable).

	* AUTHORS: add Jesse van den Kieboom and myself to sync with the about
	dialog.

2006-11-25  Paolo Borelli  <pborelli@katamail.com>

	* gedit/gedit-ui.xml: add a toplevel menu placeholder.
	Suggested by Артём Попов, bug #375419.

2006-11-20  Steve Frécinaux  <code@istique.net>

	* plugins/filebrowser/gedit-file-browser-widget.c: set the toolbar icon
	size to GTK_ICON_SIZE_MENU, so that it's smaller than the main toolbar.

2006-11-19  Steve Frécinaux  <code@istique.net>

	* plugins/externaltools/tools/stock-tools.xml: removed since it is
	not used anymore.

2006-11-19  Steve Frécinaux  <code@istique.net>
	
	New storage system for External Tools Plugin. It uses the filesystem
	instead of an XML file and allows to write scripts in bash, but 
	also (at least) in perl, python, ruby.
	
	NB: library.ToolLibrary.__init__() imports the old custom tools from
	the old XML store file at first run (ie when there is no tools
	directory in ~)
	