@@ -1,5 +1,11 @@
 2006-12-01  Paolo Borelli  <pborelli@katamail.com>
 
+	* gedit/plugins/filebrowser/gedit-file-browser-widget.c: add
+	an accel for the Advanced Filetering expander and make it
+	sensitive when appropriate.
+
+2006-12-01  Paolo Borelli  <pborelli@katamail.com>
+
 	* gedit/plugins/filebrowser/gedit-file-browser-store.c:
 	* gedit/plugins/filebrowser/gedit-file-browser-view.c:
 
